<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_title">Settings</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_logout">Log Out</string>
    <string name="label_language">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_zulu">isiZulu</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_save_failed">Failed to save</string>
    <string name="lang_setswana">Setswana</string>
</resources>